# quazip

./: CMakeLists.txt  minizip_crypt.h  quazip.pri
